#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-08-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9958 released.

        * More changes to Makefile.PL for Win XP.


2011-08-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9957 released.

        * Modified functionality to choose default modules.


2011-08-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9956 released.

        * More changes to Makefile.PL.

        * Added &persist_get() and &persist_put().


2011-08-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9955 released.

        * More changes to Makefile.PL to correct
          small regex issue for Win XP.


2011-08-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9954 released.

        * More changes to Makefile.PL to correct
          issues.


2011-08-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9953 released.

        * More changes to Makefile.PL to correct
          editor choice sed syntax.


2011-08-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9952 released.

        * More changes to Makefile.PL to correct
          editor choice.


2011-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9951 released.

        * More changes to Makefile.PL.


2011-07-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9950 released.

        * Fixed BerkeleyDB code to work with latest 5.2
          release.

        * Better handling for top script indicated menu_config.

