@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 776dde6649219d5b75ef5bfe1d5d16d40de42ce1 ChangeLog
+SHA1 b86d4518dc355e7efe1aea8027b676c6f568bf51 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 1de0d85d55ca910f45e298e8cd885a0206597d38 MANIFEST
-SHA1 b707a1f1536da62e295d6bf6afe27c42a8ad7d65 META.yml
-SHA1 0adaacc919792b80f1e36e295931715ce9b20d83 Makefile.PL
+SHA1 53dc79628341ceddfdadfe5123dfab03b2b76c50 META.yml
+SHA1 4782dfaa2a78383efba28c86b5d8976fdbc73d48 Makefile.PL
 SHA1 ffcc80b5c5cbb52f2c2234e9d66f9f32d63f9be7 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 31a954fc45c651d869abaf2f52ecead8f898648f bin/fullauto.pl
@@ -35,7 +35,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 a728e2fd446b0d262f40800066909612e14a1ae2 lib/Net/FullAuto.pm
+SHA1 17370f36fe90199499d56267c9d66c2d48a21c34 lib/Net/FullAuto.pm
 SHA1 8a710a48bb21aa584949dbbe3649c0d5b2b084fc lib/Net/FullAuto/Custom/BackUp/README
 SHA1 b9b90c2707951d9d5753dc9ef9699abe7daddee9 lib/Net/FullAuto/Custom/README
 SHA1 3dba6317f994a5d42a6f45f959a7829aba92e242 lib/Net/FullAuto/Distro/fa_code.pm
@@ -44,13 +44,13 @@ SHA1 2f5889b356d25c1f95b56a84ef9c63a6626282e9 lib/Net/FullAuto/Distro/fa_host.pm
 SHA1 4cffe8447a92a1248708fe86d06ac60b9db30478 lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 f5e618dff484911180f567c9e3335acc23065ac1 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 bc2de233a6cffb34bc72356e99605ce9bfc02a25 lib/Net/FullAuto/Distro/fa_menu_demo.pm
-SHA1 319ea97789a7ff1c24e5981092302c2ef7fb5301 lib/Net/FullAuto/FA_Core.pm
+SHA1 7f26d398ce729e619623fd88a61330372f56dfdf lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk5DSc0ACgkQdsVAdUjO9ImRQQCeP+F2y1vCnbnv7NNhl/71sX4i
-63MAn2LJgZbjPrETNsJEtEAX841mS07K
-=Y5JX
+iEYEARECAAYFAk5Igl0ACgkQdsVAdUjO9Im6zgCggcMxIoJVrdH2CXXOMPAp/Khz
+WesAn00u5Y7DU2k2jky6Dc8gxKBhKY9c
+=z9al
 -----END PGP SIGNATURE-----
