@@ -54,7 +54,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9958';
+our $VERSION='0.9959';
 
 
 use 5.005;
